--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,9 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #0B2434;
+  padding: 20px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+main {
+  background: #F5F5F5;
+  height: 300px;
+  max-width:800px;
+  border-radius: 10px;
 }
