--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -15,8 +19,36 @@ code {
 }
 
 main {
-  background: #F5F5F5;
-  height: 300px;
-  max-width:800px;
-  border-radius: 10px;
+  background-color: papayawhip;
+  height: 200px;
+  max-width: 800px;
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.dice-container {
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 20px;
+  align-items: center;
+}
+
+.die-face {
+  height: 50px;
+  width: 50px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: white;
+}
+
+.die-number {
+  font-size: 2rem;
 }
