--- a/src/style/index.css
+++ b/src/style/index.css
@@ -21,7 +21,7 @@ code {
 
 main {
   background-color: papayawhip;
-  height: 200px;
+  height: 260px;
   max-width: 800px;
   border-radius: 5px;
   padding: 20px;
@@ -29,6 +29,18 @@ main {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.instructions {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
 }
 
 .dice-container {
@@ -62,6 +74,7 @@ main {
   color: white;
   font-size: large;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .roll-dice:active {
