--- a/src/style/index.css
+++ b/src/style/index.css
@@ -67,7 +67,7 @@ main {
 
 .roll-dice {
   height: 50px;
-  width: 100px;
+  width: 115px;
   border: none;
   border-radius: 6px;
   background-color: darkslategray;
@@ -75,6 +75,7 @@ main {
   font-size: large;
   margin-top: 10px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .roll-dice:active {
